# ResearchHub

./: .cursorignore  .env.example  .gitignore  Dockerfile  INSTRUCTOR_GUIDE.md  QUICKSTART.md  README.md  WORKSHOP_GUIDE.md  docker-compose.yml  main.py  pyproject.toml
authentication/: urls.py
config/: celery.py  settings.py  urls.py
docs/: CACHE_BUG_DEMONSTRATION.md  DOCUMENTATION_EXERCISE.md  INSTRUCTOR_GUIDE_REVISED.md  N1_QUERY_DEMONSTRATION.md  QUICKSTART.md  README.md  SECURITY_BUG_DEMONSTRATION.md  TESTING_GUIDE.md  WORKSHOP_GUIDE.md
research/: models.py  urls.py  views.py
research/management/commands/: setup_test_data.py
research/migrations/: 0001_initial.py
workshop_scripts/: cache_demonstrate_problem.py  cache_fixed_version.py  cache_test_your_fix.py  n1_investigate_dashboard_performance.py  n1_step1_review_data.py  n1_step3_fixed_version.py  n1_step4_compare_performance.py  security_demonstrate_breach.py  security_fixed_version.py  security_test_your_fix.py  verify_setup.py
